--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 body {
-    background: url(images\milky.jpg)no-repeat fixed;
-    background: cover;
+    background: url(https://fr.gamewallpapers.com/download.php?img=wallpaper_destiny_2_beyond_light_01_1920x1080.jpg)no-repeat fixed;
+}
+.footer-bot{
+    background:grey;
 }
