--- a/style.css
+++ b/style.css
@@ -7,3 +7,18 @@ body {
 .kindred{
     width: 150px;
 }
+/* .fa-youtube:before {
+    content: "\f167";
+}
+.fa-2x {
+    font-size: 2em;
+}
+.fab {
+    font-family: "Font Awesome 5 Brands";
+}
+.fab, .far {
+    font-weight: 400;
+}
+element.style {
+    color: red;
+} */
